--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.23.0",
     "sass": "^1.75.0"
   },
